Fix layout bugs.

--- a/about/about3.css
+++ b/about/about3.css
@@ -37,12 +37,21 @@
   height: 50%;
   filter: grayscale(100%) sepia(100%) hue-rotate(250deg) saturate(500%) brightness(0.7); 
 }
+
 .band-member-write-up {
   font-size: calc(var(--w)/23);
   height: 17%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.band-member-write-up p {
+  font-size: calc(var(--w)/23);
+}
+
+.track-name {
+  color: hsl(250, 100%, 60%);
 }
 
 @media only screen and (orientation: landscape) {
@@ -82,6 +91,15 @@
   }
 
   .band-member-write-up {
+    font-size: calc(var(--w)/50);
+    padding: 0%;
+    top: 50%;
+    padding: 0% 4%;
+  }
+
+  .band-member-write-up p {
+    width: 100%;
+    height: 100%;
     font-size: calc(var(--w)/50);
     padding: 0%;
     top: 50%;
